--- a/src/components/Footer/footer.modules.css
+++ b/src/components/Footer/footer.modules.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #333;
     color: white;
-    padding: 8px; 
+    padding: 0.1px; 
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -21,11 +21,11 @@
   }
   
   ul li {
-    margin-bottom: 3px;
+    margin-bottom: 5px;
   }
   
   a {
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: 12px; /* Reduzindo o tamanho da fonte dos links */
   }
