--- a/src/components/CadastrarUsuario/CadastrarUsuario.module.css
+++ b/src/components/CadastrarUsuario/CadastrarUsuario.module.css
@@ -4,12 +4,22 @@ body{
 
 .CardPrincipal {
     border: 1.5px solid #000;
-    border-radius: 12px;
-    width: 35%;
+    border-radius: 10px;
+    width: 45%;
+    height: 60%;
+    padding: 5%;
+    margin: auto;
+    margin-top:  1%;
+    background-color: rgb(255, 255, 255)
+}
+.CardPrincipal2 {
+    border: 1.5px solid #000;
+    border-radius: 50px;
+    width: 100%;
     height: 60%;
     padding: 4%;
     margin: auto;
-    margin-top:  6%;
+    margin-top:  1%;
     background-color: rgb(255, 255, 255)
 }
 .Email {
@@ -76,4 +86,11 @@ body{
     position: absolute; /* Posicionamento absoluto */
     margin-top: 1px;
     margin-left: 250px;
+}
+.Hr {
+    border: 1.5px solid #000;
+}
+.Span{
+    width: 200px;
+    height: 200px;
 }
