--- a/src/components/Footer/footer.modules.css
+++ b/src/components/Footer/footer.modules.css
@@ -5,6 +5,17 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+  }
+  .footer2 {
+    background-color: #333;
+    color: white;
+    padding: 1.3px; 
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
     bottom: 0;
     left: 0;
   }
