--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -1,6 +1,30 @@
 body{
     background-color: rgb(255, 255, 255);
 }
+.EsqueceuSenha {
+    font-size: 12px;
+    text-align: right;
+    margin-bottom: 20px;
+    color: #777;
+  }
+  
+  .Botao,
+  .Botao2 {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    background: linear-gradient(45deg, #692CAB, #692cab6b);
+    color: #fff;
+    transition: background-color 0.3s ease;
+  }
+  
+  .Botao:hover,
+  .Botao2:hover {
+    background: linear-gradient(45deg, #692CAB, #fd3a6b);
+  }
 
 .CardPrincipal {
     border: 1.5px solid #000;
@@ -10,7 +34,7 @@ body{
     padding: 4%;
     margin: auto;
     margin-top:  6%;
-    background-color: rgb(255, 255, 255)
+    background-color: rgba(255, 255, 255, 0.97)
 }
 .Email {
     background-color: rgba(128, 128, 128, 0.396);
@@ -68,12 +92,4 @@ body{
     color: white;
 }
 
-.Bola {
-    width: 200px; /* Largura da bola */
-    height: 200px; /* Altura da bola (igual à largura para torná-la redonda) */
-    background-color: #692cab6b; /* Cor da bola com 50% de opacidade */
-    border-radius: 50%; /* Torna a borda do elemento redonda, criando uma bola */
-    position: absolute; /* Posicionamento absoluto */
-    margin-top: 1px;
-    margin-left: 250px;
-}
+
