--- a/src/Pages/EscolherCategoria/EscolherCategoria.module.css
+++ b/src/Pages/EscolherCategoria/EscolherCategoria.module.css
@@ -24,8 +24,8 @@ body{
     border-radius: 10px;
     background-color: #7979796b;
     color: black;
-    margin: 0 50px; /* Espaçamento horizontal entre os botões */
-    padding: 10px 20px; /* Espaçamento interno do botão */
+    margin: 0 50px; 
+    padding: 10px 20px; 
     font-size: larger;
 }
 
@@ -34,19 +34,19 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 70vh; /* % da altura da tela */
+    height: 70vh; 
 }
   
   .TopButtons,
   .BottomButtons {
     display: flex;
     justify-content: center;
-    margin-bottom: 60px; /* Espaçamento entre os grupos de botões */
+    margin-bottom: 60px; 
 }
 
 .Categorias img {
-    width: 100%; /* Largura do ícone */
-    height: 100%; /* Altura do ícone */
+    width: 100%; 
+    height: 100%;
   }
 
 .Opcoes {
