--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -37,20 +37,20 @@ body{
 }
 .Email {
     margin-bottom: 20px;
-    margin-top: 5px; /* Aproxima da borda superior */
+    margin-top: 5px;
     background-color: rgba(128, 128, 128, 0.396);
     border-radius: 5px;
     display: block;
-    width: 100%; /* Muda a largura para ocupar toda a largura da div */
+    width: 100%; 
     height: 40px;
 }
 
 .Senha {
-    margin-bottom: 20px; /* Ajusta o espaçamento inferior */
+    margin-bottom: 20px;
     background-color: rgba(128, 128, 128, 0.396);
     border-radius: 5px;
     display: block;
-    width: 100%; /* Muda a largura para ocupar toda a largura da div */
+    width: 100%;
     height: 40px;
 }
 .Icons {
