--- a/src/components/Footer/Footer.modules.css
+++ b/src/components/Footer/Footer.modules.css
@@ -5,7 +5,7 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
   }
@@ -16,6 +16,7 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    position: absolute;
     bottom: 1;
     left: 1;
   }
