--- a/src/Pages/QuemSomos/QuemSomos.module.css
+++ b/src/Pages/QuemSomos/QuemSomos.module.css
@@ -8,26 +8,28 @@
   border-radius: 5px;
 }
 
-.Texto2{   
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    color: white; 
-    background-color: rgba(0, 0, 0, 0.5); 
-    padding: 10px 20px;
-    border-radius: 5px;
+.Texto2{
+  position: center;
+  top: 120px;
+  left: 10px;
+  color: white; 
+  background-color: rgba(0, 0, 0, 0.5); 
+  padding: 5px 50px;
+
+  border-radius: 5px;
 }
 
 .quem-somos-container{
     position: relative;
 }
 
-.img1{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100px;
-    height: 100px; 
-    border-radius: 50%; 
+.botao{
+    width: 100px; 
+    margin-left: 20px; 
+    padding: 2px 1px; 
+    font-size: 14px; 
+}
+
+.Digite{
+    width: 500px;
 }
