--- a/src/Pages/HomePageOFC/HomePageOFC.module.css
+++ b/src/Pages/HomePageOFC/HomePageOFC.module.css
@@ -8,10 +8,10 @@
   header {
     background-color: #fff;
     padding: 20px;
+    text-align: center;
   }
   
   nav {
-    display: flex;
     justify-content: space-between;
     align-items: center;
   }
@@ -31,6 +31,16 @@
     text-decoration: none;
     color: #333;
   }
+
+  nav ul li a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+
+  nav ul li a:hover {
+    color: #692cab6b;
+  }
   
   .hero {
     display: flex;
@@ -39,11 +49,8 @@
     background-color: #fff;
   }
   
-  .hero-image {
+  .hero img {
     flex: 1;
-  }
-  
-  .hero-image img {
     width: 100%;
     height: auto;
   }
@@ -90,5 +97,3 @@
   .projects {
     padding: 10px;
   }
-
-  
