--- a/src/components/NavBar/Header.module.css
+++ b/src/components/NavBar/Header.module.css
@@ -41,6 +41,7 @@
     cursor: pointer;
     font-size: 20px;
     font-family: 'Arial, Helvetica, sans-serif';
+    font-weight: bold;
     border-radius: 5px; /* torna o botão redondo */
     text-align: center;
     line-height: 20px; /* Altura da linha para alinhamento vertical, ajuste conforme necessário */
