--- a/src/Pages/CadastrarUsuario/CadastrarUsuario.module.css
+++ b/src/Pages/CadastrarUsuario/CadastrarUsuario.module.css
@@ -13,7 +13,7 @@ body{
     background-color: rgb(255, 255, 255)
 }
 .CardPrincipal2 {
-    border: 1.5px solid #000;
+    border: 1.5px solid #000000;
     border-radius: 50px;
     width: 100%;
     height: 60%;
@@ -88,7 +88,7 @@ body{
     margin-left: 250px;
 }
 .Hr {
-    border: 1.5px solid #000;
+    border-bottom: black;
 }
 .Span{
     width: 200px;
