--- a/src/Pages/MeusAnuncios/MeusAnuncios.module.css
+++ b/src/Pages/MeusAnuncios/MeusAnuncios.module.css
@@ -1,4 +1,7 @@
-/* MeusAnuncios.module.css */
+body{
+  background-color: rgb(255, 255, 255);
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
