--- a/src/Pages/RequisicaoDeServico/Requisicaodeservico.module.css
+++ b/src/Pages/RequisicaoDeServico/Requisicaodeservico.module.css
@@ -55,10 +55,11 @@ body {
 }
 
 .submitButton, .cancelButton {
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-bottom: 26%; 
 }
 
 .submitButton {
