--- a/src/components/Esferas/Esferas.module.css
+++ b/src/components/Esferas/Esferas.module.css
@@ -40,7 +40,7 @@ body{
     height: 200px; /* Altura da bola (igual à largura para torná-la redonda) */
     background-color: #692cab6b; /* Cor da bola com 50% de opacidade */
     border-radius: 50%; /* Torna a borda do elemento redonda, criando uma bola */
-    position: fixed; /* Posicionamento absoluto */
+    position: absolute; /* Posicionamento absoluto */
     right: -90px; /* Empurra a bola para fora da tela na direção direita */
     top: 550px; /* Posiciona a bola 550px do topo da tela */
     z-index: -100;
@@ -55,5 +55,59 @@ body{
     top: -100px; /* Posiciona a bola 100px acima do topo da tela */
     margin-top: 0; /* Reseta a margem superior */
     margin-left: -80px; /* Posiciona a bola 100px para a esquerda */
+    z-index: -1;
+}
+.Bola6 {
+    width: 150px;
+    height: 150px;
+    background-color: #692cab6b;
+    border-radius: 50%;
+    position: absolute;
+    top: 700px;
+    left: 20px;
+    z-index: -1;
+}
+
+.Bola7 {
+    width: 150px;
+    height: 150px;
+    background-color: #692cab6b;
+    border-radius: 50%;
+    position: absolute;
+    top: 800px;
+    right: 50px;
+    z-index: -1;
+}
+
+.Bola8 {
+    width: 150px;
+    height: 150px;
+    background-color: #692cab6b;
+    border-radius: 50%;
+    position: absolute;
+    top: 900px;
+    left: 100px;
+    z-index: -1;
+}
+
+.Bola9 {
+    width: 150px;
+    height: 150px;
+    background-color: #692cab6b;
+    border-radius: 50%;
+    position: absolute;
+    top: 1000px;
+    right: 150px;
+    z-index: -1;
+}
+
+.Bola10 {
+    width: 150px;
+    height: 150px;
+    background-color: #692cab6b;
+    border-radius: 50%;
+    position: absolute;
+    top: 1100px;
+    left: 200px;
     z-index: -1;
 }
