--- a/src/components/CardPerfil/CardPerfil.moddule.css
+++ b/src/components/CardPerfil/CardPerfil.moddule.css
@@ -1,4 +1,4 @@
-.container {
+.Container{
     width: 100%;
     height: 230px;
     border-radius: 5px;
@@ -6,62 +6,27 @@
     display: flex;
     flex-direction: row;
     border-style: solid;
-    border-width: 0.8px 0.8px 0.8px 0.8px;
+    border-width: 1px 1px 1px 1px;
     border-color: transparent;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
     margin-bottom: 1em;
 }
 
-.imageContainer {
+.Imagecontainer{
     width: 45%;
     height: 100%;
     padding-left: 1em;
     padding-right: 1em;
-    display: flex;
+    display: flex; 
 }
 
-.image {
+.image{
     width: 100%;
     border-radius: 5px;
 }
 
-.content {
-    width: 65%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.textContainer {
-    height: 60%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.buttonContainer {
-    height: 40%;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
-.title {
-    text-align: left;
-    font-size: large;
-    font-weight: 700;
-}
-
-.description {
-    text-align: left;
-    font-size: 0.9em;
-    font-weight: 500;
-}
-
-.activeButton {
-    background-color: #fc0000;
+.botaoA{
+    background-color: #4CAF50;
     border: none;
     color: white;
     height: 45px;
@@ -74,9 +39,19 @@
     border-radius: 4px;
 }
 
+.content{
+    width: 65%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
-.inactiveButton {
-    background-color: #4CAF50;
+.Pesquisa{
+    width: 400px;
+}
+
+.botaoD{
+    background-color: #fc0000;
     border: none;
     color: white;
     height: 45px;
