--- a/src/components/Anuncios/InativosPanel.module.css
+++ b/src/components/Anuncios/InativosPanel.module.css
@@ -1,78 +1,109 @@
-/* Estilos globais */
-body {
-    background-color: rgb(255, 255, 255);
-  }
-  
-  span {
-    text-align: center;
-  }
-  
-  h2 {
-    color: black;
-    font-size: 25px;
-  }
-  
+/* InativosPanel.module.css */
+.container {
+  width: 100%;
+  height: 230px;
+  border-radius: 5px;
+  padding: 5%;
+  display: flex;
+  flex-direction: row;
+  border-style: solid;
+  border-width: 0.8px;
+  border-color: transparent;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+  margin-bottom: 1em;
+}
 
-  .panelContainer {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 20px 0;
-  }
-  
-  .doacaoItem {
-    border-bottom: 1px solid #ddd;
-    padding: 10px 0;
-    display: flex; /* Adicionado para alinhar a imagem e o conteúdo */
-    align-items: center; /* Adicionado para centralizar verticalmente */
-    margin-bottom: 20px; /* Adicionado para separar os itens de doação */
-  }
-  
-  .doacaoItem:hover {
-    transform: scale(1.05);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.966);
-  }
-  
-  .doacaoItem:last-child {
-    border-bottom: none;
-  }
-  
-  .h2 {
-    font-size: 18px; /* Mantém a fonte do item de doação menor do que o global */
-    color: black;
-    margin: 0;
-    margin-bottom: 8px;
-  }
-  
-  .descricao {
-    font-size: 14px;
-    color: #555;
-    margin: 0;
-  }
-  
-  .reativarButton {
-    background-color: #fc0000; /* Green */
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
+.imageContainer {
+  width: 45%;
+  height: 100%;
+  padding-left: 1em;
+  padding-right: 1em;
+  display: flex;
+}
 
-  .imagem {
-    max-width: 25%;
-    height: auto;
-    margin-right: 20px; /* Espaço entre a imagem e o texto */
+.image {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.content {
+  width: 65%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.textContainer {
+  height: 60%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.buttonContainer {
+  height: 40%;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.title {
+  text-align: left;
+  font-size: large;
+  font-weight: 700;
+}
+
+.description {
+  text-align: left;
+  font-size: 0.9em;
+  font-weight: 500;
+}
+
+.activeButton {
+  background-color: #fc0000;
+  border: none;
+  color: white;
+  height: 45px;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.inactiveButton {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  height: 45px;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4
+}
+  .fade-enter {
+    opacity: 0;
+    transform: scale(0.9);
   }
-  .previewImage {
-    max-width: 40%; /* Defina o tamanho máximo da imagem */
-    max-height: 40%; /* Defina a altura máxima da imagem */
-    border-radius: 10px; /* Borda arredondada */
+  .fade-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 300ms, transform 300ms;
+  }
+  
+  .fade-exit {
+    opacity: 1;
+    transform: scale(1);
+  }
+  .fade-exit-active {
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 300ms, transform 300ms;
   }
