Finalizando botões da pagina meus anuncios, css do footer

--- a/src/components/Footer/Footer.modules.css
+++ b/src/components/Footer/Footer.modules.css
@@ -1,55 +1,56 @@
-body{
-  background-color: rgb(255, 255, 255);
+/* Footer.modules.css */
+
+.footer2 {
+  background-color: #222;
+  color: #fff;
+  padding: 50px 0;
+  display: flex;
+  justify-content: space-around;
 }
 
-.footer {
-    background-color: #333;
-    color: white;
-    padding: 1.3px; 
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-  
-  .footer2 {
-    background-color: #333;
-    color: white;
-    padding: 1.3px; 
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    position: absolute;
-    bottom: 1;
-    left: 1;
-  }
-  
-  .footer-section {
-    flex: 1;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  ul li {
-    margin-bottom: 5px;
-  }
-  
-  a {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 12px;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
-  h2 {
-    font-size: 14px; /* Reduzindo o tamanho da fonte dos títulos */
-  }
+.footer2 div {
+  flex: 1;
+  text-align: center;
+}
+
+.footer2 h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.footer2 ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer2 ul li {
+  margin-bottom: 10px;
+}
+
+.footer2 ul li a {
+  color: #ccc;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer2 ul li a:hover {
+  color: #fff;
+}
+
+.footer2 .social-icons {
+  margin-top: 20px;
+}
+
+.footer2 .social-icons a {
+  color: #ccc;
+  margin-right: 20px;
+  font-size: 24px;
+  transition: color 0.3s ease;
+}
+
+.footer2 .social-icons a:hover {
+  color: #fff;
+}
+
+
