--- a/src/components/Anuncios/InativosPanel.module.css
+++ b/src/components/Anuncios/InativosPanel.module.css
@@ -11,6 +11,14 @@
   border-color: transparent;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
   margin-bottom: 1em;
+} 
+
+.panelContainer {
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
 }
 
 .imageContainer {
