--- a/src/Pages/EscolherCategoria/EscolherCategoria.module.css
+++ b/src/Pages/EscolherCategoria/EscolherCategoria.module.css
@@ -22,7 +22,7 @@ body {
   width: 200px;
   height: 200px;
   border-radius: 10px;
-  background-color: #7979796b;
+  background-color: white;
   color: black;
   margin: 0 50px;
   padding: 10px 20px;
@@ -56,8 +56,8 @@ body {
 }
 
 .Categorias img {
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
   object-fit: contain;
 }
 
